# OldDriver

./: .gitignore  CMakeLists.txt  README.md
include/uart/: rpi_uart.h  uart_status.cpp
lib/uart/: rpi_uart.h  uart_status.h
src/: const.h  main.cpp
src/accelerator/: AccMain.hpp  AccMsg.h  Accelerator.cpp  Accelerator.h  CRC.cpp  CRC.h
src/brake/: BrakeMain.hpp  BrakeMsg.h  BrakeRead.cpp  BrakeRead.h  BrakeWrite.cpp  BrakeWrite.h
src/communication/: Controller.hpp  Controller.lcm  LcmHandler.cpp  LcmHandler.h
src/steering/: Steering.cpp  Steering.h  SteeringMain.hpp  SteeringMsg.h
test/: test.cpp
test/communication/: LcmHandlerTest.hpp
